@@ -5,6 +5,7 @@ use warnings;
 
 use Krang::ClassLoader base => 'ElementClass';
 use Krang::ClassLoader Log => qw(debug info critical);
+use Krang::ClassLoader Conf => qw(PreviewSSL);
 
 #use Krang::MethodMaker
 #  get_set => [ qw( ) ];
@@ -135,7 +136,8 @@ sub template_data {
     if ($args{publisher}->is_publish()) {
         return 'http://' . $args{element}->data()->url();
     } elsif ($args{publisher}->is_preview()) {
-        return "$ENV{KRANG_PREVIEW_SCHEME}://" . $args{element}->data()->preview_url();
+        my $scheme = PreviewSSL ? 'https' : 'http';
+        return "$scheme://" . $args{element}->data()->preview_url();
     } else {
         croak (__PACKAGE__ . ': Not in publish or preview mode.  Cannot return proper URL.');
     }
